// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BundleAssetsTotalsTable default 1`] = `
<table
  className="root"
>
  <thead>
    <tr>
      <th
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
         
      </th>
      <th
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
         
      </th>
      <th
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      />
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        Total Size
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          2.47MB
          <span
            className="delta"
          >
            <span
              className="root"
            >
              <code
                className="value negative"
              >
                +0.36%
              </code>
            </span>
          </span>
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          2.46MB
          <span
            className="delta"
          />
        </code>
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        CSS
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          152.65KB
          <span
            className="delta"
          >
            <span
              className="root"
            >
              <code
                className="value negative"
              >
                +0.96%
              </code>
            </span>
          </span>
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          151.2KB
          <span
            className="delta"
          />
        </code>
      </td>
    </tr>
    <tr
      className="unchanged"
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        Fonts
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        -
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        -
      </td>
    </tr>
    <tr
      className="unchanged"
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        HTML
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          40B
          <span
            className="delta"
          />
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          40B
          <span
            className="delta"
          />
        </code>
      </td>
    </tr>
    <tr
      className="unchanged"
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        IMG
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          278.12KB
          <span
            className="delta"
          />
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          278.12KB
          <span
            className="delta"
          />
        </code>
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        JS
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          2.05MB
          <span
            className="delta"
          >
            <span
              className="root"
            >
              <code
                className="value negative"
              >
                +0.36%
              </code>
            </span>
          </span>
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          2.04MB
          <span
            className="delta"
          />
        </code>
      </td>
    </tr>
    <tr
      className="unchanged"
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        Media
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        -
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        -
      </td>
    </tr>
    <tr
      className="unchanged"
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        Other
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          788B
          <span
            className="delta"
          />
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          788B
          <span
            className="delta"
          />
        </code>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Delta biggerIsBetter - false 1`] = `
<span
  className="root"
>
  <code
    className="value negative"
  >
    20kb
  </code>
</span>
`;

exports[`Storyshots Delta default 1`] = `
<span
  className="root"
>
  <code
    className="value positive"
  >
    20kb
  </code>
</span>
`;

exports[`Storyshots Delta empty 1`] = `
<span
  className="root"
>
  <code
    className="value"
  >
    0kb
  </code>
</span>
`;

exports[`Storyshots Metric default 1`] = `
<code
  className="root"
>
  100
  <span
    className="delta"
  >
    delta
  </span>
</code>
`;

exports[`Storyshots MetricsTable default 1`] = `
<table
  className="root"
>
  <thead>
    <tr>
      <th
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
         
      </th>
      <th
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        Run #1
      </th>
      <th
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        Run #2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        webpack.totalSize
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          873421
          <span
            className="delta"
          />
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          122331
          <span
            className="delta"
          >
            <span
              className="root"
            >
              <code
                className="value positive"
              >
                -85.99%
              </code>
            </span>
          </span>
        </code>
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        lighthouse.time-to-first-byte
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          1231
          <span
            className="delta"
          />
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          980
          <span
            className="delta"
          >
            <span
              className="root"
            >
              <code
                className="value positive"
              >
                -20.39%
              </code>
            </span>
          </span>
        </code>
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        Score
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          80
          <span
            className="delta"
          />
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          70
          <span
            className="delta"
          >
            <span
              className="root"
            >
              <code
                className="value negative"
              >
                -12.5%
              </code>
            </span>
          </span>
        </code>
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        webpack.totalSizeByType_js
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          344232
          <span
            className="delta"
          />
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        -
      </td>
    </tr>
    <tr
      className="unchanged"
    >
      <td
        className="cell metricName"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        lighthouse.performance-score
      </td>
      <td
        className="cell value current"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          80
          <span
            className="delta"
          />
        </code>
      </td>
      <td
        className="cell value baseline"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        <code
          className="root"
        >
          80
          <span
            className="delta"
          />
        </code>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table default 1`] = `
<table
  className="root"
>
  <thead>
    <tr />
  </thead>
  <tbody>
    <tr
      className=""
    >
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a1
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b1
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c1
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a2
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b2
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c2
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a3
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b3
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table with custom alignment 1`] = `
<table
  className="root"
>
  <thead>
    <tr>
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        
      </th>
      <th
        className="cell"
        style={
          Object {
            "textAlign": "right",
            "width": undefined,
          }
        }
      >
        Col A (right)
      </th>
      <th
        className="cell"
        style={
          Object {
            "textAlign": "center",
            "width": undefined,
          }
        }
      >
        Col B (center)
      </th>
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        Col C
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
    >
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        row 1
      </th>
      <td
        className="cell"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        a1
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        b1
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c1
      </td>
    </tr>
    <tr
      className=""
    >
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        row 2
      </th>
      <td
        className="cell"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        a2
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        b2
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c2
      </td>
    </tr>
    <tr
      className=""
    >
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        row 3
      </th>
      <td
        className="cell"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        a3
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        b3
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table with headers 1`] = `
<table
  className="root"
>
  <thead>
    <tr>
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        Col A
      </th>
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        Col B
      </th>
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        Col C
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
    >
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a1
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b1
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c1
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a2
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b2
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c2
      </td>
    </tr>
    <tr
      className=""
    >
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a3
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b3
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table with row headers 1`] = `
<table
  className="root"
>
  <thead>
    <tr />
  </thead>
  <tbody>
    <tr
      className=""
    >
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        row 1
      </th>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a1
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b1
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c1
      </td>
    </tr>
    <tr
      className=""
    >
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        row 2
      </th>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a2
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b2
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c2
      </td>
    </tr>
    <tr
      className=""
    >
      <th
        className="cell"
        style={
          Object {
            "textAlign": undefined,
            "width": undefined,
          }
        }
      >
        row 3
      </th>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        a3
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        b3
      </td>
      <td
        className="cell"
        style={
          Object {
            "textAlign": undefined,
          }
        }
      >
        c3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Tooltip default 1`] = `
<div
  style={
    Object {
      "padding": "100px 100px",
    }
  }
>
  <span
    className="root"
  >
    Job #100
    <div
      className="tooltip"
    >
      View job #100
    </div>
  </span>
</div>
`;
